--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,10 @@
+Users should be on a line in order to add Iteration, defect, or interaction
+
+Users should be logged in to add Iteration, defect, or interaction
+
 New Defect Creation should redirect to Release Notes for defects
 
-Make release notes table cleaner (dropdown to see details)
-
-Fix formatting of input fields for login 
-
-Fix notices
-
-Add Edit views for Interactions and Defects
+Add Edit views for Defects
 
 Add edit/delete function for Iteration
 
@@ -16,4 +14,7 @@ Disallow duplicates:
     -Defects
     -Interactions
     -Lines
+    -Line Scrum Master
     -Iteration
+
+Add instructions on home page
